# ToolScout

./: .gitignore  LICENSE  README.md  README.zh-CN.md  pyproject.toml
benchmark/: __init__.py  e2e_eval.py  eval_utils.py  execution_aware_eval.py  generate_eval_report.py  hard_negative_eval.py  judge_eval.py  retrieval_accuracy.py  robustness_eval.py  scaling_test.py  token_cost_eval.py  tool_selection_eval.py
datasets/: generate_tools.py  skills.json  synthetic_tools.json  tool_hard_negatives.json  tool_queries.json  tools_1000.json
examples/: langgraph_agent.py  openai_agent_demo.py  retrieval_demo.py  simple_agent.py
toolscout/: __init__.py  cli.py  execution_feedback.py  mcp_adapter.py  skill_registry.py  skill_retriever.py  tool_graph.py  tool_simulator.py
toolscout/encoder/: __init__.py  tool_encoder.py
toolscout/executor/: __init__.py  tool_executor.py
toolscout/index/: __init__.py  tool_index.py
toolscout/registry/: __init__.py  tool_registry.py
toolscout/retriever/: __init__.py  tool_retriever.py
